--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <version>[4.13.1,)</version>
         </dependency>
     </dependencies>
     <build>
